[project]
name = "liveagent-mcp-server"
version = "0.1.0"
description = "MCP server for LiveAgent API integration"
readme = "README.md"
authors = [{name = "Viktor Zeman"}]
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.2.0",
    "liveagent-api @ git+https://github.com/QualityUnit/LiveAgent-api-python.git",
    "python-dotenv>=1.0.0",
]

[project.scripts]
liveagent-mcp = "liveagent_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"